--- a/WX/app.json
+++ b/WX/app.json
@@ -9,5 +9,12 @@
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
     "navigationBarTextStyle":"black"
+  },
+  "debug":false,
+  "networkTimeout":{
+      "request":10000,
+      "connectSocket":10000,
+      "uploadFile":10000,
+      "downloadFile":10000
   }
 }
