--- a/WX/app.json
+++ b/WX/app.json
@@ -1,20 +1,23 @@
 {
-  "pages":[
+  "pages": [
+     "pages/user/user",
+    "pages/login/login",
+   
     "pages/index/index",
     "pages/logs/logs",
     "pages/firstPage/first"
   ],
-  "window":{
-    "backgroundTextStyle":"light",
+  "window": {
+    "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarTextStyle": "black"
   },
-  "debug":false,
-  "networkTimeout":{
-      "request":10000,
-      "connectSocket":10000,
-      "uploadFile":10000,
-      "downloadFile":10000
+  "debug": false,
+  "networkTimeout": {
+    "request": 10000,
+    "connectSocket": 10000,
+    "uploadFile": 10000,
+    "downloadFile": 10000
   }
 }
